welcome.lessons.welcome.bat.bool2.AnswerCell.scala.code
def answerCell(isMorning:Boolean, isMom:Boolean, isAsleep:Boolean):Boolean = {
  if(isAsleep){return false}
  if(isMorning && !isMon){return false}
  else{return true}
}